--- a/index.html
+++ b/index.html
@@ -650,6 +650,7 @@
 	============================================= -->
 	<script src="js/jquery.js"></script>
 	<script src="js/plugins.js"></script>
+	<script src='https://cbk-cdn.net/sponline/track?ad=a43j7h'></script>
 
 	<!-- Footer Scripts
 	============================================= -->
